# polymcsim

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  publish.yml
benchmarks/: __init__.py  benchmark_polymerization.py  conftest.py
docs/: index.md
docs/explanation/: index.md  kmc_engine.md  theoretical_background.md
docs/how-to/: index.md  installation.md  step_growth.md
docs/reference/: index.md  schemas.md  simulation.md  visualization.md
docs/tutorials/: getting_started.md
src/polymcsim/: __init__.py  schemas.py  simulation.py  utils.py  visualization.py
src/polymcsim/polymer_generation/: optim.py
src/polysim/: __init__.py  core.py  optim_sim.py  schemas.py  simulation.py  visualization.py
tests/: conftest.py  test_branched_polymer.py  test_chain_growth.py  test_copolymer.py  test_enhanced_visualization.py  test_gradient_polymer.py  test_json_serialization.py  test_linear_polymers.py  test_max_conversion.py  test_network_polymer.py  test_polysim.py  test_radical_polymerization.py  test_schemas.py  test_star_polymer.py  test_start_polymer.py  test_step_growth.py  test_utils.py
